Update and rename ben.html to index.html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <header>
     <div class="header-container">
     <div class="logo-container">
-        <img src="lab.jpg" alt="Our logo" class="logo">
+        <img src="logo.jpg" alt="Our logo" class="logo">
     </div>
     <div class="header-title">
         <h1>BRONZE TECH DEVELOPERS</h1>
